# reddit_telegram_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
assistant/: __init__.py  auth.py  config.py  logging_config.py  main.py  matcher.py  models.py  monitor.py  reddit_client.py  scheduler.py  storage.py  telegram_bot.py
assistant/commands/: __init__.py  account.py  check_now.py  comments.py  save.py  saved.py  status.py
config/: keywords.txt
tests/: test_commands_and_telegram.py  test_config_and_auth.py  test_logging.py  test_matcher.py  test_monitor.py  test_reddit_client.py  test_storage.py
